# TeamProject4

./: .gitignore  Animator.cpp  Animator.h  CMakeLists.txt  ChipmunkDemo.vcxproj  ChipmunkDemo.vcxproj.filters  CircleCollider.cpp  CircleCollider.h  Colliders.cpp  Colliders.h  CollisionSystem.cpp  CollisionSystem.h  ConfigurationManager.cpp  ConfigurationManager.h  Controller.cpp  Controller.h  Dash.sln  ECS.cpp  ECS.h  GameScene.cpp  GameScene.h  Helper.h  MapChipManager.cpp  MapChipManager.h  Primitives.cpp  Primitives.h  SFX.cpp  SFX.h  SceneBase.cpp  SceneBase.h  TeamProject5.sln  TitleScene.cpp  TitleScene.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h  main.cpp  rankings.json
Release/Dash.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dash.lastbuildstate  Dash.read.1u.tlog  Dash.write.1u.tlog
TeamProject5/: Helper.h  IUpdatable.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  TeamProject5.cpp  TeamProject5.vcxproj  TeamProject5.vcxproj.filters  Window.cpp  Window.h
TeamProject5/x64/Debug/: vc142.idb
lib/: chipmunk.lib
map/: stage_shadow.csv  stage_side.csv  title.tmx  title_floor.csv  title_side.csv
map/backup/: stage.tmx  title_font.csv  title_shadow.csv
x64/Debug/: ChipmunkDemo.exp  ChipmunkDemo.ilk  ChipmunkDemo.lib  ChipmunkDemo.vcxproj.FileListAbsolute.txt  TeamProject5.ilk  vc142.idb
x64/Debug/ChipmunkDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChipmunkDemo.read.1u.tlog  ChipmunkDemo.write.1u.tlog  link.3928.delete.1.tlog  (+15 more)
x64/Release/: ChipmunkDemo.vcxproj.FileListAbsolute.txt  Dash.ipdb  rankings.json
(+33 files in other folders)
